--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -230,8 +230,6 @@
   "lu-xian-dian-zuo-biao": "路线点坐标",
   "che-liang-su-du-ms": "车辆速度m/s",
   "xia-fa-ren-wu-shi-bai": "下发任务失败！",
-  "lu-zhi-jie-shu-qing-bao-cun-lu-zhi-lu-xian-mo-ban-xuan-ze-mo-ban-zai-xia-fa-ren-wu": "录制结束，请保存录制路线模板，选择模板再下发任务！",
-  "qing-xian-xin-jian-lu-zhi-lu-jing-huo-dian-ji-qing-kong-jian": "请先新建录制路径或点击清空键！",
   "lu-xian-dian": "路线点",
   "qing-shu-ru-ip": "请输入IP",
   "qing-shu-ru-duan-kou": "请输入端口",
@@ -244,5 +242,6 @@
   "guan-bi": "关闭",
   "yi-kai-shi-lu-zhi-zhong": "已开始录制中",
   "rtsp-di-zhi": "rtsp 地址",
-  "shua-xin": "刷新"
+  "shua-xin": "刷新",
+  "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "已结束录制,未存在路线！"
 }
