--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -230,8 +230,6 @@
   "che-liang-su-du-ms": "Vitesse du véhicule m/s",
   "lu-xian-dian-zuo-biao": "coordonnées du point d'itinéraire",
   "xia-fa-ren-wu-shi-bai": "Échec de l'envoi de la tâche !",
-  "lu-zhi-jie-shu-qing-bao-cun-lu-zhi-lu-xian-mo-ban-xuan-ze-mo-ban-zai-xia-fa-ren-wu": "Fin de l'enregistrement, enregistrez le modèle d'itinéraire d'enregistrement, sélectionnez le modèle et lancez la tâche!",
-  "qing-xian-xin-jian-lu-zhi-lu-jing-huo-dian-ji-qing-kong-jian": "Veuillez d'abord créer un nouveau chemin d'enregistrement ou appuyer sur la touche vider!",
   "lu-xian-dian": "point d'itinéraire",
   "duan-kou": "port",
   "ip": "PI",
@@ -244,5 +242,6 @@
   "kai-qi": "allumer",
   "yi-kai-shi-lu-zhi-zhong": "L'enregistrement a commencé",
   "rtsp-di-zhi": "adresse RTSP",
-  "shua-xin": "rafraîchir"
+  "shua-xin": "rafraîchir",
+  "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "L'enregistrement est terminé, aucun itinéraire n'existe !"
 }
