refactor: 重构模板列表组件

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,5 +242,6 @@
   "shua-xin": "refresh",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "Recording has ended, no route exists!",
   "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "Please fill in the x and y values, separated by commas, such as: 1,2",
-  "xiang-qing": "Details"
+  "xiang-qing": "Details",
+  "wei-xuan-ze-mo-ban": "No template selected"
 }
