--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -242,5 +242,6 @@
   "shua-xin": "刷新",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "已结束录制,未存在路线！",
   "xiang-qing": "详情",
-  "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "请填写x,y值,逗号分隔，如：1,2"
+  "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "请填写x,y值,逗号分隔，如：1,2",
+  "wei-xuan-ze-mo-ban": "未选择模板"
 }
