--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -242,5 +242,6 @@
   "shua-xin": "rafraîchir",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "L'enregistrement est terminé, aucun itinéraire n'existe !",
   "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "Veuillez remplir les valeurs x et y, séparées par des virgules, telles que : 1,2",
-  "xiang-qing": "Détails"
+  "xiang-qing": "Détails",
+  "wei-xuan-ze-mo-ban": "Aucun modèle sélectionné"
 }
