--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,5 +242,7 @@
   "shua-xin": "refresh",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "Recording has ended, no route exists!",
   "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "Please fill in the x and y values, separated by commas, such as: 1,2",
-  "xiang-qing": "Details"
+  "xiang-qing": "Details",
+  "yi-duan-kai-lian-jie": "Disconnected!",
+  "yi-lian-jie": "connected!"
 }
