feat: 优化 ws 连接提示

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,5 +242,14 @@
   "shua-xin": "refresh",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "Recording has ended, no route exists!",
   "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "Please fill in the x and y values, separated by commas, such as: 1,2",
-  "xiang-qing": "Details"
+  "xiang-qing": "Details",
+  "jian-ting-jing-bao-lian-jie-cheng-gong": "Listening alarm connection successful",
+  "jian-ting-jing-bao-lian-jie-duan-kai": "Listening alarm connection disconnected",
+  "jian-ting-jing-bao-lian-jie-cuo-wu": "Listen alert connection error",
+  "jian-ting-zhuang-tai-lian-jie-cheng-gong": "Listening status connection successful",
+  "jian-ting-zhuang-tai-lian-jie-duan-kai": "Monitoring status connection disconnected",
+  "jian-ting-zhuang-tai-lian-jie-cuo-wu": "Listening status connection error",
+  "jian-ting-wei-zhi-lian-jie-cheng-gong": "Listening location connected successfully",
+  "jian-ting-wei-zhi-lian-jie-duan-kai": "Listening location connection disconnected",
+  "jian-ting-wei-zhi-lian-jie-cuo-wu": "Listening location connection error"
 }
