--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -243,5 +243,8 @@
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "已结束录制,未存在路线！",
   "xiang-qing": "详情",
   "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "请填写x,y值,逗号分隔，如：1,2",
-  "wei-xuan-ze-mo-ban": "未选择模板"
+  "wei-xuan-ze-mo-ban": "未选择模板",
+  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "请从路线点开始绘制",
+  "bao-cun-fan-hang-lu-xian-chu-cuo": "保存返航路线出错",
+  "xian-xin-jian-fan-hang-lu-jing": "先新建返航路径"
 }
