feat: 优化主动连接断开ws开关

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -262,5 +262,7 @@
   "qu-xiao": "Cancel",
   "que-ding-bu-bao-cun-lu-xian-ma": "Are you sure you don't want to save the route?",
   "ren-wu-zhi-hang-jie-shu": "Mission execution is over!",
-  "yi-qu-xiao-bao-cun-lu-xian": "Saved route canceled"
+  "yi-qu-xiao-bao-cun-lu-xian": "Saved route canceled",
+  "duan-kai": "disconnect",
+  "lian-jie": "connect"
 }
