--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -262,5 +262,8 @@
   "qu-xiao": "Annuler",
   "que-ding-bu-bao-cun-lu-xian-ma": "Êtes-vous sûr de ne pas vouloir enregistrer l'itinéraire ?",
   "ren-wu-zhi-hang-jie-shu": "L'exécution de la mission est terminée !",
-  "yi-qu-xiao-bao-cun-lu-xian": "Itinéraire enregistré annulé"
+  "yi-qu-xiao-bao-cun-lu-xian": "Itinéraire enregistré annulé",
+  "wei-fa-xian-yun-tai-huo-sun-huai": "Aucun cardan trouvé ou endommagé",
+  "yun-tai-chui-zhi-jiao-du": "Angle vertical PTZ",
+  "yun-tai-shui-ping-jiao-du": "Angle horizontal PTZ"
 }
