--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -262,5 +262,8 @@
   "kai-shi-zhi-hang-ren-wu": "开始执行任务",
   "que-ding-bu-bao-cun-lu-xian-ma": "确定不保存路线吗？",
   "yi-qu-xiao-bao-cun-lu-xian": "已取消保存路线",
-  "qu-xiao": "取消"
+  "qu-xiao": "取消",
+  "yun-tai-shui-ping-jiao-du": "云台水平角度",
+  "wei-fa-xian-yun-tai-huo-sun-huai": "未发现云台或损坏",
+  "yun-tai-chui-zhi-jiao-du": "云台垂直角度"
 }
