--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -267,5 +267,6 @@
   "yun-tai-chui-zhi-jiao-du": "Angle vertical PTZ",
   "yun-tai-shui-ping-jiao-du": "Angle horizontal PTZ",
   "duan-kai": "déconnecter",
-  "lian-jie": "connecter"
+  "lian-jie": "connecter",
+  "jie-shu-bo-fang": "terminer la lecture"
 }
