--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -267,5 +267,6 @@
   "wei-fa-xian-yun-tai-huo-sun-huai": "未发现云台或损坏",
   "yun-tai-chui-zhi-jiao-du": "云台垂直角度",
   "lian-jie": "连接",
-  "duan-kai": "断开"
+  "duan-kai": "断开",
+  "jie-shu-bo-fang": "结束播放"
 }
