feat: 任务路线上的默认车速设置

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -268,5 +268,7 @@
   "yun-tai-shui-ping-jiao-du": "Angle horizontal PTZ",
   "duan-kai": "déconnecter",
   "lian-jie": "connecter",
-  "jie-shu-bo-fang": "terminer la lecture"
+  "jie-shu-bo-fang": "terminer la lecture",
+  "mo-ren-che-su": "Vitesse par défaut",
+  "she-zhi-mo-ren-che-su": "Définir la vitesse par défaut"
 }
