--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -268,5 +268,7 @@
   "yun-tai-shui-ping-jiao-du": "PTZ horizontal angle",
   "duan-kai": "disconnect",
   "lian-jie": "connect",
-  "jie-shu-bo-fang": "end playback"
+  "jie-shu-bo-fang": "end playback",
+  "mo-ren-che-su": "Default speed",
+  "she-zhi-mo-ren-che-su": "Set default speed"
 }
