feat: 国际化完善

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -268,5 +268,9 @@
   "yun-tai-shui-ping-jiao-du": "Angle horizontal PTZ",
   "duan-kai": "déconnecter",
   "lian-jie": "connecter",
-  "jie-shu-bo-fang": "terminer la lecture"
+  "jie-shu-bo-fang": "terminer la lecture",
+  "cha-kan-lu-xian": "Voir l'itinéraire",
+  "cun-chu-shi-pin": "Vidéo du magasin",
+  "ren-wu-hua-mian": "écran de mission",
+  "ren-wu-shi-pin": "Vidéo des missions"
 }
