--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -268,5 +268,9 @@
   "yun-tai-shui-ping-jiao-du": "PTZ horizontal angle",
   "duan-kai": "disconnect",
   "lian-jie": "connect",
-  "jie-shu-bo-fang": "end playback"
+  "jie-shu-bo-fang": "end playback",
+  "cha-kan-lu-xian": "View route",
+  "cun-chu-shi-pin": "Store video",
+  "ren-wu-hua-mian": "mission screen",
+  "ren-wu-shi-pin": "Mission video"
 }
