--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -268,5 +268,9 @@
   "yun-tai-chui-zhi-jiao-du": "云台垂直角度",
   "lian-jie": "连接",
   "duan-kai": "断开",
-  "jie-shu-bo-fang": "结束播放"
+  "jie-shu-bo-fang": "结束播放",
+  "cha-kan-lu-xian": "查看路线",
+  "ren-wu-hua-mian": "任务画面",
+  "ren-wu-shi-pin": "任务视频",
+  "cun-chu-shi-pin": "存储视频"
 }
