--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -270,5 +270,7 @@
   "duan-kai": "断开",
   "jie-shu-bo-fang": "结束播放",
   "she-zhi-mo-ren-che-su": "设置默认车速",
-  "mo-ren-che-su": "默认车速"
+  "mo-ren-che-su": "默认车速",
+  "che-su-xiu-gai-shi-bai": "车速修改失败",
+  "qing-xian-she-zhi-mo-ren-che-su": "请先设置默认车速！"
 }
