feat: 任务类型修改

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -272,5 +272,6 @@
   "she-zhi-mo-ren-che-su": "设置默认车速",
   "mo-ren-che-su": "默认车速",
   "che-su-xiu-gai-shi-bai": "车速修改失败",
-  "qing-xian-she-zhi-mo-ren-che-su": "请先设置默认车速！"
+  "qing-xian-she-zhi-mo-ren-che-su": "请先设置默认车速！",
+  "jing-li-shi-bie": "敬礼识别"
 }
