--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -274,5 +274,6 @@
   "che-su-xiu-gai-shi-bai": "车速修改失败",
   "qing-xian-she-zhi-mo-ren-che-su": "请先设置默认车速！",
   "jing-li-shi-bie": "敬礼识别",
-  "shang-zhuang-kong-zhi": "上装控制"
+  "shang-zhuang-kong-zhi": "上装控制",
+  "yi-chang-wei-zhi": "异常位置"
 }
