feat: 路线标注异常位置

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,6 @@
   "ting-zhi": "Stop",
   "ding-shi-ren-wu": "Scheduled tasks",
   "ji-guang-fa-san-qi": "Laser diffuser",
-  "yu-yin": "Voice",
   "jie-shu": "End.",
   "qing-kong": "Clear",
   "shan-chu": "Delete",
@@ -15,7 +14,6 @@
   "zheng-chang": "Normal",
   "xuan-ze-che-liang": "Select a car.",
   "pei-zhi-jian-kong": "Configure monitoring",
-  "wei-xuan-ze-che-liang": "No vehicle selected",
   "chui-zhi-jiao-du": "Vertical angle",
   "di-pan": "Chassis",
   "dian-liang": "Battery level",
@@ -132,12 +130,8 @@
   "xin-jian-lu-xian": "Create new route",
   "shi-pin-qie-huan": "Video switching",
   "qing-xian-jie-shu-lu-zhi": "Please end recording first",
-  "websocket-chu-cuo-duan-lian": "websocket error and disconnection!",
-  "websocket-duan-kai-lian-jie": "websocket disconnected!",
   "websocket-duan-kai-zhong-lian-zhong": "websocket disconnected and reconnecting...",
-  "websocket-lian-jie-cheng-gong": "websocket connection successful!",
   "qing-xuan-ze-ren-wu-lei-xing": "Please select task type",
-  "shi-bie-ren-wu": "recognition task",
   "xun-jian-ren-wu": "Inspection tasks",
   "bao-cun-fan-hang-lu-xian": "Save return route",
   "che-liang-fan-hang": "Vehicle return",
@@ -212,17 +206,13 @@
   "zi-zhu-jie-suo": "Autonomous unlocking",
   "ting-zhi-shang-suo": "Stop locking",
   "qing-shang-chuan-zheng-que-de-lu-xian-wen-jian": "Please upload the correct route file",
-  "she-zhi-wei-fan-hang-dian": "Set as home point",
-  "she-zhi-wei-ren-wu-dian": "Set as mission point",
   "shou-ye-fen-xi": "Home page analysis",
   "hua-mian": "Frame",
   "cha-kan-jing-bao-xiang-qing": "View alert details",
   "jing-bao": "Alarm",
-  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Cancel the drawing of the return route",
   "bian-ji-che-su": "Edit speed",
   "lu-xian-bu-cun-zai-qing-you-jian-jie-shu-hua-xian": "The route does not exist, please right-click to end drawing the line!",
   "lu-xian-dian-gong-neng-she-zhi": "Route point function settings",
-  "she-zhi-che-su": "Set vehicle speed",
   "tian-jia-fan-hang-dian": "Add return point",
   "che-liang-su-du-ms": "Vehicle speed m/s",
   "lu-xian-dian-zuo-biao": "route point coordinates",
@@ -239,13 +229,9 @@
   "kai-qi": "turn on",
   "yi-kai-shi-lu-zhi-zhong": "Started recording",
   "rtsp-di-zhi": "rtsp address",
-  "shua-xin": "refresh",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "Recording has ended, no route exists!",
-  "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "Please fill in the x and y values, separated by commas, such as: 1,2",
   "xiang-qing": "Details",
   "wei-xuan-ze-mo-ban": "No template selected",
-  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "Please start drawing from route point",
-  "bao-cun-fan-hang-lu-xian-chu-cuo": "Error saving return route",
   "xian-xin-jian-fan-hang-lu-jing": "Create a new return route first",
   "yi-duan-kai-lian-jie": "Disconnected!",
   "yi-lian-jie": "connected!",
@@ -272,6 +258,16 @@
   "mo-ren-che-su": "Default speed",
   "she-zhi-mo-ren-che-su": "Set default speed",
   "che-su-xiu-gai-shi-bai": "Vehicle speed modification failed",
-  "qing-xian-she-zhi-mo-ren-che-su": "Please set the default speed first!",
-  "shang-zhuang-kong-zhi": "Bodywork control"
+  "shang-zhuang-kong-zhi": "Bodywork control",
+  "cha-kan-xiang-qing": "check the details",
+  "jing-du": "longitude",
+  "jing-li-shi-bie": "Salute recognition",
+  "shi-ji-fa-xian-shi-jian": "Actual discovery time",
+  "tie-si-wang-po-kong-jian-ce": "Barbed wire hole detection",
+  "tong-zhi-shi-jian": "Notification time",
+  "wei-du": "latitude",
+  "wu": "none",
+  "yi-chang-wei-zhi": "Abnormal location",
+  "yi-chang-xiang-qing": "Exception details",
+  "you": "have"
 }
