--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -4,7 +4,6 @@
   "zi-zhu": "自主",
   "mo-ban": "模板",
   "ding-shi-ren-wu": "定时任务",
-  "yu-yin": "语音",
   "ting-zhi": "停止",
   "ji-guang-fa-san-qi": "激光发散器",
   "qing-kong": "清空",
@@ -15,7 +14,6 @@
   "zheng-chang": "正常",
   "xuan-ze-che-liang": "选择车辆",
   "pei-zhi-jian-kong": "配置监控",
-  "wei-xuan-ze-che-liang": "未选择车辆",
   "quan-ping-hua-mian-qie-huan": "全屏画面切换",
   "fan-hui": "返回",
   "qu-niao": "驱鸟",
@@ -132,13 +130,9 @@
   "jie-shu-lu-zhi": "结束录制",
   "shi-pin-qie-huan": "视频切换",
   "qing-xian-jie-shu-lu-zhi": "请先结束录制",
-  "websocket-lian-jie-cheng-gong": "websocket连接成功!",
-  "websocket-duan-kai-lian-jie": "websocket断开连接!",
-  "websocket-chu-cuo-duan-lian": "websocket出错断连!",
   "websocket-duan-kai-zhong-lian-zhong": "websocket断开重连中...",
   "qing-xuan-ze-ren-wu-lei-xing": "请选择任务类型",
   "xun-jian-ren-wu": "巡检任务",
-  "shi-bie-ren-wu": "识别任务",
   "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "已结束录制，请保存路线!",
   "kai-shi-lu-zhi": "开始录制",
   "mo-ban-lie-biao": "模板列表",
@@ -212,15 +206,11 @@
   "zi-zhu-jie-suo": "自主解锁",
   "ting-zhi-shang-suo": "停止上锁",
   "qing-shang-chuan-zheng-que-de-lu-xian-wen-jian": "请上传正确的路线文件",
-  "she-zhi-wei-ren-wu-dian": "设置为任务点",
-  "she-zhi-wei-fan-hang-dian": "设置为返航点",
   "shou-ye-fen-xi": "首页分析",
   "hua-mian": "画面",
   "cha-kan-jing-bao-xiang-qing": "查看警报详情",
   "jing-bao": "警报",
-  "qu-xiao-fan-hang-lu-xian-hui-zhi": "取消返航路线绘制",
   "lu-xian-dian-gong-neng-she-zhi": "路线点功能设置",
-  "she-zhi-che-su": "设置车速",
   "tian-jia-fan-hang-dian": "添加返航点",
   "bian-ji-che-su": "编辑车速",
   "lu-xian-bu-cun-zai-qing-you-jian-jie-shu-hua-xian": "路线不存在，请右键结束画线!",
@@ -239,13 +229,9 @@
   "guan-bi": "关闭",
   "yi-kai-shi-lu-zhi-zhong": "已开始录制中",
   "rtsp-di-zhi": "rtsp 地址",
-  "shua-xin": "刷新",
   "yi-jie-shu-lu-zhi-wei-cun-zai-lu-xian": "已结束录制,未存在路线！",
   "xiang-qing": "详情",
-  "qing-tian-xie-xy-zhi-dou-hao-fen-ge-ru-12": "请填写x,y值,逗号分隔，如：1,2",
   "wei-xuan-ze-mo-ban": "未选择模板",
-  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "请从路线点开始绘制",
-  "bao-cun-fan-hang-lu-xian-chu-cuo": "保存返航路线出错",
   "xian-xin-jian-fan-hang-lu-jing": "先新建返航路径",
   "yi-lian-jie": "已连接！",
   "yi-duan-kai-lian-jie": "已断开连接！",
@@ -272,8 +258,16 @@
   "she-zhi-mo-ren-che-su": "设置默认车速",
   "mo-ren-che-su": "默认车速",
   "che-su-xiu-gai-shi-bai": "车速修改失败",
-  "qing-xian-she-zhi-mo-ren-che-su": "请先设置默认车速！",
   "jing-li-shi-bie": "敬礼识别",
   "shang-zhuang-kong-zhi": "上装控制",
-  "yi-chang-wei-zhi": "异常位置"
+  "yi-chang-wei-zhi": "异常位置",
+  "cha-kan-xiang-qing": "查看详情",
+  "shi-ji-fa-xian-shi-jian": "实际发现时间",
+  "tie-si-wang-po-kong-jian-ce": "铁丝网破孔检测",
+  "you": "有",
+  "wu": "无",
+  "tong-zhi-shi-jian": "通知时间",
+  "jing-du": "经度",
+  "wei-du": "纬度",
+  "yi-chang-xiang-qing": "异常详情"
 }
