feat: 处理警报操作相关功能

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -269,5 +269,6 @@
   "wu": "none",
   "yi-chang-wei-zhi": "Abnormal location",
   "yi-chang-xiang-qing": "Exception details",
-  "you": "have"
+  "you": "have",
+  "cao-zuo-cheng-gong": "Successful operation"
 }
