--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -269,5 +269,6 @@
   "wu": "aucun",
   "yi-chang-wei-zhi": "Localisation anormale",
   "yi-chang-xiang-qing": "Détails des exceptions",
-  "you": "avoir"
+  "you": "avoir",
+  "cao-zuo-cheng-gong": "Opération réussie"
 }
