--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -269,5 +269,6 @@
   "tong-zhi-shi-jian": "通知时间",
   "jing-du": "经度",
   "wei-du": "纬度",
-  "yi-chang-xiang-qing": "异常详情"
+  "yi-chang-xiang-qing": "异常详情",
+  "cao-zuo-cheng-gong": "操作成功"
 }
