feat: time out alarm

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -270,5 +270,7 @@
   "yi-chang-wei-zhi": "Abnormal location",
   "yi-chang-xiang-qing": "Exception details",
   "you": "have",
-  "cao-zuo-cheng-gong": "Successful operation"
+  "cao-zuo-cheng-gong": "Successful operation",
+  "gao-jing": "Alarm",
+  "cha-kan-tu-pian": "view image"
 }
