--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -270,5 +270,7 @@
   "yi-chang-wei-zhi": "Localisation anormale",
   "yi-chang-xiang-qing": "Détails des exceptions",
   "you": "avoir",
-  "cao-zuo-cheng-gong": "Opération réussie"
+  "cao-zuo-cheng-gong": "Opération réussie",
+  "gao-jing": "Alarme",
+  "cha-kan-tu-pian": "Voir l'image"
 }
