--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -270,5 +270,7 @@
   "jing-du": "经度",
   "wei-du": "纬度",
   "yi-chang-xiang-qing": "异常详情",
-  "cao-zuo-cheng-gong": "操作成功"
+  "cao-zuo-cheng-gong": "操作成功",
+  "gao-jing": "告警",
+  "cha-kan-tu-pian": "查看图片"
 }
