feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -270,5 +270,8 @@
   "yi-chang-wei-zhi": "Abnormal location",
   "yi-chang-xiang-qing": "Exception details",
   "you": "have",
-  "cao-zuo-cheng-gong": "Successful operation"
+  "cao-zuo-cheng-gong": "Successful operation",
+  "cha-kan-lu-xian": "View route",
+  "ren-wu-hua-mian": "mission screen",
+  "ren-wu-shi-pin": "Mission video"
 }
