--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -270,5 +270,8 @@
   "yi-chang-wei-zhi": "Localisation anormale",
   "yi-chang-xiang-qing": "Détails des exceptions",
   "you": "avoir",
-  "cao-zuo-cheng-gong": "Opération réussie"
+  "cao-zuo-cheng-gong": "Opération réussie",
+  "cha-kan-lu-xian": "Voir l'itinéraire",
+  "ren-wu-hua-mian": "écran de mission",
+  "ren-wu-shi-pin": "Vidéo des missions"
 }
