--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -270,5 +270,8 @@
   "jing-du": "经度",
   "wei-du": "纬度",
   "yi-chang-xiang-qing": "异常详情",
-  "cao-zuo-cheng-gong": "操作成功"
+  "cao-zuo-cheng-gong": "操作成功",
+  "ren-wu-shi-pin": "任务视频",
+  "ren-wu-hua-mian": "任务画面",
+  "cha-kan-lu-xian": "查看路线"
 }
