--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -272,5 +272,6 @@
   "you": "have",
   "cao-zuo-cheng-gong": "Successful operation",
   "gao-jing": "Alarm",
-  "cha-kan-tu-pian": "view image"
+  "cha-kan-tu-pian": "view image",
+  "deng-guang-kong-zhi": "Lighting control"
 }
