--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -272,5 +272,6 @@
   "you": "avoir",
   "cao-zuo-cheng-gong": "Opération réussie",
   "gao-jing": "Alarme",
-  "cha-kan-tu-pian": "Voir l'image"
+  "cha-kan-tu-pian": "Voir l'image",
+  "deng-guang-kong-zhi": "Contrôle d'éclairage"
 }
