--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -272,5 +272,6 @@
   "yi-chang-xiang-qing": "异常详情",
   "cao-zuo-cheng-gong": "操作成功",
   "gao-jing": "告警",
-  "cha-kan-tu-pian": "查看图片"
+  "cha-kan-tu-pian": "查看图片",
+  "deng-guang-kong-zhi": "灯光控制"
 }
