--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -273,5 +273,11 @@
   "cao-zuo-cheng-gong": "Opération réussie",
   "gao-jing": "Alarme",
   "cha-kan-tu-pian": "Voir l'image",
-  "deng-guang-kong-zhi": "Contrôle d'éclairage"
+  "deng-guang-kong-zhi": "Contrôle d'éclairage",
+  "zuo": "Gauche",
+  "you-0": "droite",
+  "qian": "avant",
+  "hou": "dos",
+  "xuan-ze-yin-pin": "Sélectionnez l'audio",
+  "yin-pin": "l'audio"
 }
