--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -273,5 +273,11 @@
   "cao-zuo-cheng-gong": "操作成功",
   "gao-jing": "告警",
   "cha-kan-tu-pian": "查看图片",
-  "deng-guang-kong-zhi": "灯光控制"
+  "deng-guang-kong-zhi": "灯光控制",
+  "zuo": "左",
+  "you-0": "右",
+  "qian": "前",
+  "hou": "后",
+  "xuan-ze-yin-pin": "选择音频",
+  "yin-pin": "音频"
 }
