feat: 警报灯控制

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -276,5 +276,6 @@
   "ren-wu-hua-mian": "mission screen",
   "ren-wu-shi-pin": "Mission video",
   "gao-jing": "Alarm",
-  "cha-kan-tu-pian": "view image"
+  "cha-kan-tu-pian": "view image",
+  "jing-bao-deng": "warning light"
 }
