--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -276,5 +276,6 @@
   "ren-wu-hua-mian": "écran de mission",
   "ren-wu-shi-pin": "Vidéo des missions",
   "gao-jing": "Alarme",
-  "cha-kan-tu-pian": "Voir l'image"
+  "cha-kan-tu-pian": "Voir l'image",
+  "jing-bao-deng": "lumière d'alarme"
 }
