--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -276,5 +276,6 @@
   "cha-kan-lu-xian": "查看路线",
   "cun-chu-shi-pin": "存储视频",
   "gao-jing": "告警",
-  "cha-kan-tu-pian": "查看图片"
+  "cha-kan-tu-pian": "查看图片",
+  "jing-bao-deng": "警报灯"
 }
