--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -283,5 +283,6 @@
   "qian": "forward",
   "hou": "back",
   "xuan-ze-yin-pin": "Select audio",
-  "yin-pin": "Audio"
+  "yin-pin": "Audio",
+  "dui-jiang": "intercom"
 }
