--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -283,5 +283,6 @@
   "qian": "avant",
   "hou": "dos",
   "xuan-ze-yin-pin": "Sélectionnez l'audio",
-  "yin-pin": "l'audio"
+  "yin-pin": "l'audio",
+  "dui-jiang": "interphone"
 }
