feat: 召回与校准国际化

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -286,5 +286,7 @@
   "xuan-ze-yin-pin": "Select audio",
   "yin-pin": "Audio",
   "dui-jiang": "intercom",
-  "dian-yuan": "power supply"
+  "dian-yuan": "power supply",
+  "zhao-hui": "recall",
+  "xiao-zhun": "calibration"
 }
