--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -286,5 +286,7 @@
   "xuan-ze-yin-pin": "Sélectionnez l'audio",
   "yin-pin": "l'audio",
   "dui-jiang": "interphone",
-  "dian-yuan": "source de courant"
+  "dian-yuan": "source de courant",
+  "zhao-hui": "rappel",
+  "xiao-zhun": "étalonnage"
 }
