--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -286,5 +286,7 @@
   "xuan-ze-yin-pin": "选择音频",
   "yin-pin": "音频",
   "dui-jiang": "对讲",
-  "dian-yuan": "电源"
+  "dian-yuan": "电源",
+  "zhao-hui": "召回",
+  "xiao-zhun": "校准"
 }
