--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -288,5 +288,8 @@
   "dui-jiang": "interphone",
   "dian-yuan": "source de courant",
   "zhao-hui": "rappel",
-  "xiao-zhun": "étalonnage"
+  "xiao-zhun": "étalonnage",
+  "chao-shi-wei-chu-li": "Délai d'attente non traité",
+  "bu-chu-li": "Non traité",
+  "ji-huo": "Activation"
 }
