--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -288,5 +288,8 @@
   "dui-jiang": "对讲",
   "dian-yuan": "电源",
   "zhao-hui": "召回",
-  "xiao-zhun": "校准"
+  "xiao-zhun": "校准",
+  "chao-shi-wei-chu-li": "超时未处理",
+  "bu-chu-li": "不处理",
+  "ji-huo": "激活"
 }
