feat: 国际化优化

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -25,26 +25,18 @@
   "kong-zhi-qi": "Contrôleur",
   "liu-hua-qing": "Hydrogène sulfuré",
   "qian-jin": "Avancer",
-  "qu-niao": "Chasser les oiseaux",
-  "qu-niao-qi-kong-zhi": "Contrôle de l'épouvantail",
-  "qu-ren": "irritant",
-  "quan-ping-hua-mian-qie-huan": "Changement d'écran en plein écran",
   "she-zhi-ying-she": "Configurer la correspondance",
   "shi-du": "Humidité",
-  "shi-neng": "activer",
-  "shi-neng-0": "Incapacité",
   "shui-ping-jiao-du": "l'angle horizontal",
   "su-du": "vitesse",
   "suo-ding": "Verrouiller",
   "tong-zhi": "Notification",
-  "websocket-lian-jie-yi-duan-kai": "La connexion websocket est interrompue.",
   "wei-zhi": "inconnu",
   "wen-du": "Température",
   "wu-huo-yan": "Pas de flamme",
   "wu-yan-wu": "Sans fumée",
   "yan-wu": "Fumée",
   "yi-yang-hua-tan": "Le monoxyde de carbone",
-  "yin-liang": "Volume",
   "you-huo-yan": "Il y a des flammes.",
   "you-yan-wu": "Il y a de la fumée.",
   "yun-tai-kong-zhi": "Contrôle de la plateforme de caméra.",
@@ -147,7 +139,6 @@
   "yu-yan": "langue",
   "zhu-ti": "thème",
   "ji-qi-ren-code": "Code des robots",
-  "lu-xian": "itinéraire",
   "lu-xian-mo-ban": "modèle d'itinéraire",
   "shi-pin": "vidéo",
   "xun-luo-ren-wu": "Mission de patrouille",
@@ -162,7 +153,6 @@
   "xin-zeng-ren-wu-dian": "Ajouter un point de tâche",
   "cha-xun": "Enquête",
   "zhong-zhi": "Réinitialisation",
-  "cha-kan-geng-duo": "Voir plus",
   "an-fan-wei-cha-xun": "Requête par plage",
   "an-nian-cha-xun": "Requête par année",
   "an-tian-cha-xun": "Requête par jour",
@@ -254,7 +244,6 @@
   "yun-tai-shui-ping-jiao-du": "Angle horizontal PTZ",
   "duan-kai": "déconnecter",
   "lian-jie": "connecter",
-  "jie-shu-bo-fang": "terminer la lecture",
   "mo-ren-che-su": "Vitesse par défaut",
   "she-zhi-mo-ren-che-su": "Définir la vitesse par défaut",
   "che-su-xiu-gai-shi-bai": "La modification de la vitesse du véhicule a échoué",
@@ -285,15 +274,43 @@
   "hou": "dos",
   "xuan-ze-yin-pin": "Sélectionnez l'audio",
   "yin-pin": "l'audio",
-  "dui-jiang": "interphone",
   "dian-yuan": "source de courant",
-  "zhao-hui": "rappel",
-  "xiao-zhun": "étalonnage",
   "chao-shi-wei-chu-li": "Délai d'attente non traité",
   "bu-chu-li": "Non traité",
   "ji-huo": "Activation",
   "shi-pin-zhuang-tai": "Statut de la vidéo",
   "wei-xia-zai": "Pas téléchargé",
   "yi-xia-zai": "Téléchargé",
-  "xia-zai-zhong": "En téléchargement"
+  "xia-zai-zhong": "En téléchargement",
+  "qu-san-kong-zhi": "dissiper le contrôle",
+  "bo-fang-yu-yin": "Jouer la voix",
+  "cha-xun-zhuang-tai": "État de la requête",
+  "fan-bao": "Explosion générale",
+  "fan-chang": "long",
+  "guan-deng": "Éteindre les lumières",
+  "han-hua": "crier",
+  "ju-bao": "Exploser",
+  "ju-guang-chang-liang": "Projecteur toujours brillant",
+  "qiang-qu-san": "Forte dissipation",
+  "quan-guan": "Complètement fermé",
+  "ruo-qu-san": "Faible dissipation",
+  "bo-fang": "jouer",
+  "che-shou": "Retirer",
+  "chu-shi-hua": "initialisation",
+  "chui-zhi-su-du": "vitesse verticale",
+  "dan-qu-xun-huan": "Cycle unique",
+  "fu-wei": "réinitialiser",
+  "ji-guang-zhi-shi": "pointeur laser",
+  "lie-biao": "liste",
+  "quan-bu-xun-huan": "tout boucler",
+  "quan-jing-kong-zhi": "contrôle panoramique",
+  "shang-yi-shou": "Chanson précédente",
+  "shou-yin-le": "morceau de musique",
+  "shui-ping-su-du": "vitesse horizontale",
+  "shun-xu-bo-fang": "jouer dans l'ordre",
+  "xia-yi-shou": "prochaine chanson",
+  "xuan-ze-di": "Sélectionnez le",
+  "yin-liang-0": "volume",
+  "yin-liang-1": "volume-",
+  "zhuang-tai-fan-hui": "retour de statut"
 }
