feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -312,5 +312,6 @@
   "xuan-ze-di": "Select the",
   "yin-liang-0": "volume",
   "yin-liang-1": "volume-",
-  "zhuang-tai-fan-hui": "status return"
+  "zhuang-tai-fan-hui": "status return",
+  "che-deng-kong-zhi": "car light control"
 }
