--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -312,5 +312,6 @@
   "xuan-ze-di": "Sélectionnez le",
   "yin-liang-0": "volume",
   "yin-liang-1": "volume-",
-  "zhuang-tai-fan-hui": "retour de statut"
+  "zhuang-tai-fan-hui": "retour de statut",
+  "che-deng-kong-zhi": "contrôle de l'éclairage de la voiture"
 }
