--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -312,5 +312,6 @@
   "chu-shi-hua": "初始化",
   "shui-ping-su-du": "水平速度",
   "chui-zhi-su-du": "垂直速度",
-  "quan-jing-kong-zhi": "全景控制"
+  "quan-jing-kong-zhi": "全景控制",
+  "che-deng-kong-zhi": "车灯控制"
 }
