feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -295,5 +295,48 @@
   "shi-pin-zhuang-tai": "Video status",
   "wei-xia-zai": "Not downloaded",
   "yi-xia-zai": "Downloaded",
-  "xia-zai-zhong": "Downloading"
+  "xia-zai-zhong": "Downloading",
+  "dang-qian-che-su": "Current speed",
+  "dang-wei": "gear",
+  "dang-wei-gu-zhang": "gear failure",
+  "di-pan-gu-zhang-zhuang-tai": "Chassis fault status",
+  "fang-xiang-pan-zhuan-jiao-kong-zhi": "Steering wheel angle control",
+  "gen-sui": "follow",
+  "hou-you-lun-su": "Rear right wheel speed",
+  "hou-zuo-lun-su": "rear left wheel speed",
+  "kong-zhi-ming-ling-duan-kai": "Control command disconnected",
+  "qian-hou-zhuan-xiang-tong-xiang-mo-shi": "Front and rear steering in the same direction mode",
+  "qian-hou-zhuan-xiang-yi-xiang": "Front and rear steering in opposite directions",
+  "qian-you-lun-su": "Front right wheel speed",
+  "qian-zhao-deng": "headlamp",
+  "qian-zhuan-xiang-mo-shi": "forward steering mode",
+  "qian-zuo-lun-su": "front left wheel speed",
+  "qu-dong-fang-shi": "Drive mode",
+  "qu-dong-xi-tong-ying-jian-gu-zhang": "Drive system hardware failure",
+  "shuang-shan": "Double flash",
+  "song-kai-zhu-che": "Release to park",
+  "su-du-kong-zhi-mo-shi": "speed control mode",
+  "ta-ban-qing-qiu-zhi-fan-kui": "Pedal request value feedback",
+  "wu-gu-zhang": "Trouble-free",
+  "wu-xian-han-hua": "Wireless propaganda",
+  "wu-xiao": "invalid",
+  "xun-luo": "patrol",
+  "you-gu-zhang": "failure",
+  "you-men-ta-ban-mo-shi": "accelerator pedal mode",
+  "you-zhuan": "Turn right",
+  "zhi-dong-deng": "brake light",
+  "zhi-dong-xi-tong-ying-jian-gu-zhang": "Braking system hardware failure",
+  "zhi-dong-zhi-fan-kui": "Braking value feedback",
+  "zhu-che": "Parking",
+  "zhu-che-gu-zhang": "Parking fault",
+  "zhu-che-mo-shi": "Parking mode",
+  "zhuan-xiang-deng-zhuang-tai": "Turn signal status",
+  "zhuan-xiang-kong-zhi-fang-shi": "Steering control method",
+  "zhuan-xiang-xi-tong-ying-jian-gu-zhang": "Steering system hardware failure",
+  "zi-dong-jia-shi-dang-wei-kong-zhi-xin-hao-diu-shi-huo-huan-dang-shi-bai": "Automatic driving gear control signal is lost or gear shifting fails",
+  "zi-dong-jia-shi-qu-dong-kong-zhi-tong-xun-duan-kai": "Autopilot drive control communication disconnected",
+  "zi-dong-jia-shi-zhi-dong-kong-zhi-xin-hao-zhuang-tai": "Automatic driving brake control signal status",
+  "zi-dong-jia-shi-zhu-che-kong-zhi-xin-hao": "Autonomous driving parking control signal",
+  "zi-dong-jia-shi-zhuan-xiang-kong-zhi-xin-hao-zhuang-tai": "Autonomous driving steering control signal status",
+  "zuo-zhuan": "Turn left"
 }
