--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -295,5 +295,48 @@
   "shi-pin-zhuang-tai": "视频状态",
   "wei-xia-zai": "未下载",
   "yi-xia-zai": "已下载",
-  "xia-zai-zhong": "下载中"
+  "xia-zai-zhong": "下载中",
+  "zhi-dong-xi-tong-ying-jian-gu-zhang": "制动系统硬件故障",
+  "zi-dong-jia-shi-zhi-dong-kong-zhi-xin-hao-zhuang-tai": "自动驾驶制动控制信号状态",
+  "you-gu-zhang": "有故障",
+  "wu-gu-zhang": "无故障",
+  "kong-zhi-ming-ling-duan-kai": "控制命令断开",
+  "zhi-dong-deng": "制动灯",
+  "zhi-dong-zhi-fan-kui": "制动值反馈",
+  "dang-qian-che-su": "当前车速",
+  "qu-dong-xi-tong-ying-jian-gu-zhang": "驱动系统硬件故障",
+  "zi-dong-jia-shi-qu-dong-kong-zhi-tong-xun-duan-kai": "自动驾驶驱动控制通讯断开",
+  "qu-dong-fang-shi": "驱动方式",
+  "su-du-kong-zhi-mo-shi": "速度控制模式",
+  "ta-ban-qing-qiu-zhi-fan-kui": "踏板请求值反馈",
+  "you-men-ta-ban-mo-shi": "油门踏板模式",
+  "zhu-che-gu-zhang": "驻车故障",
+  "zi-dong-jia-shi-zhu-che-kong-zhi-xin-hao": "自动驾驶驻车控制信号",
+  "zi-dong-jia-shi-dang-wei-kong-zhi-xin-hao-diu-shi-huo-huan-dang-shi-bai": "自动驾驶档位控制信号丢失或换挡失败",
+  "dang-wei-gu-zhang": "档位故障",
+  "dang-wei": "档位",
+  "wu-xiao": "无效",
+  "qian-zhao-deng": "前照灯",
+  "gen-sui": "跟随",
+  "xun-luo": "巡逻",
+  "zhu-che-mo-shi": "驻车模式",
+  "song-kai-zhu-che": "松开驻车",
+  "zhu-che": "驻车",
+  "fang-xiang-pan-zhuan-jiao-kong-zhi": "方向盘转角控制",
+  "zhuan-xiang-xi-tong-ying-jian-gu-zhang": "转向系统硬件故障",
+  "zi-dong-jia-shi-zhuan-xiang-kong-zhi-xin-hao-zhuang-tai": "自动驾驶转向控制信号状态",
+  "qian-hou-zhuan-xiang-yi-xiang": "前后转向异向",
+  "qian-hou-zhuan-xiang-tong-xiang-mo-shi": "前后转向同向模式",
+  "qian-zhuan-xiang-mo-shi": "前转向模式",
+  "zhuan-xiang-kong-zhi-fang-shi": "转向控制方式",
+  "zhuan-xiang-deng-zhuang-tai": "转向灯状态",
+  "shuang-shan": "双闪",
+  "you-zhuan": "右转",
+  "zuo-zhuan": "左转",
+  "qian-zuo-lun-su": "前左轮速",
+  "qian-you-lun-su": "前右轮速",
+  "hou-zuo-lun-su": "后左轮速",
+  "hou-you-lun-su": "后右轮速",
+  "di-pan-gu-zhang-zhuang-tai": "底盘故障状态",
+  "wu-xian-han-hua": "无线喊话"
 }
